--- a/templates/AdminAdministration.html
+++ b/templates/AdminAdministration.html
@@ -116,7 +116,7 @@
               </div>
               <div class="u-form-group u-form-group-3">
                 <label for="text-27ff" class="u-label">Contact Number</label>
-                <input type="text" placeholder="Enter your contact number" id="text-27ff" name="text"
+                <input type="text" placeholder="Enter your contact number" id="text-27ff" name="contactNum"
                   class="u-input u-input-rectangle">
               </div>
               <div class="u-align-center u-form-group u-form-submit">
