--- a/templates/AdminAdministration.html
+++ b/templates/AdminAdministration.html
@@ -101,9 +101,9 @@
         <div class="u-container-layout u-container-layout-1">
           <p class="u-text u-text-default u-text-1">Add New Admin</p>
           <div class="u-form u-form-1">
-            <form action="https://forms.nicepagesrv.com/v2/form/process"
+            <form action="/AddAdmin"
               class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form"
-              style="padding: 10px;">
+              style="padding: 10px;" method="post">
               <div class="u-form-group u-form-name">
                 <label for="name-7f33" class="u-label">Name</label>
                 <input type="text" placeholder="Enter your Name" id="name-7f33" name="name"
