--- a/templates/AdminAdministration.html
+++ b/templates/AdminAdministration.html
@@ -101,7 +101,7 @@
         <div class="u-container-layout u-container-layout-1">
           <p class="u-text u-text-default u-text-1">Add New Admin</p>
           <div class="u-form u-form-1">
-            <form action="/AddAdmin"
+            <form action="/AdminAdministration"
               class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form"
               style="padding: 10px;" method="post">
               <div class="u-form-group u-form-name">
