--- a/templates/AdminAdministration.html
+++ b/templates/AdminAdministration.html
@@ -101,9 +101,9 @@
         <div class="u-container-layout u-container-layout-1">
           <p class="u-text u-text-default u-text-1">Add New Admin</p>
           <div class="u-form u-form-1">
-            <form action="/AdminAdministration"
-              class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form"
-              style="padding: 10px;" method="post">
+            <form action="/AddAdmin"
+              class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" 
+              style="padding: 10px;" method="POST">
               <div class="u-form-group u-form-name">
                 <label for="name-7f33" class="u-label">Name</label>
                 <input type="text" placeholder="Enter your Name" id="name-7f33" name="name"
@@ -120,14 +120,15 @@
                   class="u-input u-input-rectangle">
               </div>
               <div class="u-align-center u-form-group u-form-submit">
-                <button href="#" class="u-btn u-btn-submit u-button-style" formaction="">Create</button>
-                <input type="submit" value="submit" class="u-form-control-hidden">
+                <!-- <button href="#" class="u-btn u-btn-submit u-button-style" formaction="">Create</button>
+                <input type="submit" value="submit" class="u-form-control-hidden"> -->
+                <button type="submit">Create</button>
               </div>
-              <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+              <!-- <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
               <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then
                 try again. </div>
               <input type="hidden" value="" name="recaptchaResponse">
-              <input type="hidden" name="formServices" value="bae67b54-af6c-124f-d600-1facb2d1de6d">
+              <input type="hidden" name="formServices" value="bae67b54-af6c-124f-d600-1facb2d1de6d"> -->
             </form>
           </div>
         </div>
