--- a/templates/AdminAdministration.html
+++ b/templates/AdminAdministration.html
@@ -120,15 +120,15 @@
                   class="u-input u-input-rectangle">
               </div>
               <div class="u-align-center u-form-group u-form-submit">
-                <!-- <button href="#" class="u-btn u-btn-submit u-button-style" formaction="">Create</button>
-                <input type="submit" value="submit" class="u-form-control-hidden"> -->
-                <button type="submit">Create</button>
+                <button href="#" class="u-btn u-btn-submit u-button-style" formaction="">Create</button>
+                <input type="submit" value="submit" class="u-form-control-hidden">
+                <!-- <button type="submit">Create</button> -->
               </div>
-              <!-- <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+              <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
               <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then
                 try again. </div>
               <input type="hidden" value="" name="recaptchaResponse">
-              <input type="hidden" name="formServices" value="bae67b54-af6c-124f-d600-1facb2d1de6d"> -->
+              <input type="hidden" name="formServices" value="bae67b54-af6c-124f-d600-1facb2d1de6d">
             </form>
           </div>
         </div>
