testing for whole

--- a/templates/CompanyAdministration.html
+++ b/templates/CompanyAdministration.html
@@ -9,8 +9,10 @@
   <title>CompanyAdministration</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style/nicepage.css')}}" media="screen">
   <link rel="stylesheet" href="{{ url_for('static', filename='style/CompanyAdministration.css')}}" media="screen">
-  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/jquery.js')}}" defer=""></script>
-  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/nicepage.js')}}" defer=""></script>
+  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/jquery.js')}}"
+    defer=""></script>
+  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/nicepage.js')}}"
+    defer=""></script>
   <meta name="generator" content="Nicepage 5.17.1, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -83,8 +85,9 @@
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="{{ url_for('static', filename='images/logo-removebg-preview1.png')}}" alt=""
-        data-image-width="416" data-image-height="121">
+      <img class="u-image u-image-contain u-image-default u-image-1"
+        src="{{ url_for('static', filename='images/logo-removebg-preview1.png')}}" alt="" data-image-width="416"
+        data-image-height="121">
     </div>
   </header>
   <section class="u-clearfix u-section-1" id="sec-f31b">
@@ -106,6 +109,9 @@
         <tbody class="u-align-center u-grey-10 u-table-body u-table-body-1">
           <tr style="height: 45px;">
             <td class="u-table-cell">
+              <span style="text-decoration: underline !important;">Company ID</span>
+            </td>
+            <td class="u-table-cell">
               <span style="text-decoration: underline !important;">Company Name</span>
             </td>
             <td class="u-table-cell">
@@ -116,73 +122,22 @@
             </td>
             <td class="u-table-cell"></td>
           </tr>
+
+          {% for data in company %}
           <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
+            <td class="u-table-cell">{{data[0]}}</td>
+            <td class="u-table-cell">{{data[1]}}</td>
+            <td class="u-table-cell">{{data[2]}}</td>
+            <td class="u-table-cell">{{data[3]}}</td>
+            <td>
+              <a href="/delete/{{data[0]}}" style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff;">Delete</a>
+            </td>
           </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 45px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
+          {% endfor %}
+
         </tbody>
       </table>
     </div>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-4">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-5">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-6">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-7">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-8">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-9">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-10">Delete</a>
-    <a href="https://nicepage.com/html5-template"
-      class="u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-11">Delete</a>
   </section>
 
 
