--- a/templates/CompanyRegistration.html
+++ b/templates/CompanyRegistration.html
@@ -9,8 +9,10 @@
   <title>CompanyRegistration</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style/nicepage.css')}}" media="screen">
   <link rel="stylesheet" href="{{ url_for('static', filename='style/CompanyRegistration.css')}}" media="screen">
-  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/jquery.js')}}" defer=""></script>
-  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/nicepage.js')}}" defer=""></script>
+  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/jquery.js')}}"
+    defer=""></script>
+  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/nicepage.js')}}"
+    defer=""></script>
   <meta name="generator" content="Nicepage 5.17.1, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -83,8 +85,9 @@
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="{{ url_for('static', filename='images/logo-removebg-preview1.png')}}" alt=""
-        data-image-width="416" data-image-height="121">
+      <img class="u-image u-image-contain u-image-default u-image-1"
+        src="{{ url_for('static', filename='images/logo-removebg-preview1.png')}}" alt="" data-image-width="416"
+        data-image-height="121">
     </div>
   </header>
   <section class="u-clearfix u-section-1" id="sec-b6ae">
@@ -116,59 +119,26 @@
               <span style="text-decoration: underline !important;">Decision</span>
             </td>
           </tr>
+
+          {% for data in company %}
           <tr style="height: 51px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
+            <td class="u-table-cell">{{data[0]}}</td>
+            <td class="u-table-cell">{{data[1]}}</td>
+            <td class="u-table-cell">{{data[2]}}</td>
+            <td class="u-table-cell" style="display: inline-block;">
+              <a href="/rejectCompany/{{data[0]}}"
+                style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Reject</a>
+
+              <a href="/approveCompany/{{data[0]}}"
+                style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Approve</a>
+            </td>
+
           </tr>
-          <tr style="height: 50px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 51px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 51px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
-          <tr style="height: 51px;">
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-            <td class="u-table-cell"></td>
-          </tr>
+          {% endfor %}
+
         </tbody>
       </table>
     </div>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-3">Approve</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-4">Approve</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-5">Approve</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-6">Approve</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-7">Approve</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-8"> Reject</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-9"> Reject</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-10"> Reject</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-11"> Reject</a>
-    <a href="https://nicepage.com/c/architecture-building-website-templates"
-      class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-12"> Reject</a>
   </section>
 
 
