--- a/templates/SupervisorAdministration.html
+++ b/templates/SupervisorAdministration.html
@@ -100,12 +100,12 @@
       <div class="u-container-layout u-container-layout-1">
         <p class="u-text u-text-default u-text-1">Add New Supervisor</p>
         <div class="u-form u-form-1">
-          <form action="https://forms.nicepagesrv.com/v2/form/process"
-            class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form"
-            style="padding: 10px;">
+          <form action="/AddSupervisor"
+            class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form"
+            style="padding: 10px;" method="POST">
             <div class="u-form-group u-form-group-1">
               <label for="text-3503" class="u-label">Staff ID</label>
-              <input type="text" placeholder="Enter your staff ID" id="text-3503" name="text-1"
+              <input type="text" placeholder="Enter your staff ID" id="text-3503" name="staffID"
                 class="u-input u-input-rectangle">
             </div>
             <div class="u-form-group u-form-name">
@@ -120,18 +120,18 @@
             </div>
             <div class="u-form-group u-form-group-4">
               <label for="text-27ff" class="u-label">Contact Number</label>
-              <input type="text" placeholder="Enter your contact number" id="text-27ff" name="text"
+              <input type="text" placeholder="Enter your contact number" id="text-27ff" name="contactNum"
                 class="u-input u-input-rectangle">
             </div>
             <div class="u-align-center u-form-group u-form-submit">
-              <a href="#" class="u-btn u-btn-submit u-button-style">Create</a>
+              <button href="#" class="u-btn u-btn-submit u-button-style">Create</button>
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
-            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+            <!-- <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try
               again. </div>
             <input type="hidden" value="" name="recaptchaResponse">
-            <input type="hidden" name="formServices" value="bae67b54-af6c-124f-d600-1facb2d1de6d">
+            <input type="hidden" name="formServices" value="bae67b54-af6c-124f-d600-1facb2d1de6d"> -->
           </form>
         </div>
       </div>
