reject button color

--- a/templates/StudentRegistration.html
+++ b/templates/StudentRegistration.html
@@ -125,7 +125,7 @@
             <td class="u-table-cell">{{data[1]}}</td>
             <td class="u-table-cell">{{data[2]}}</td>
             <td class="u-table-cell">
-              <a href="/rejectStudent/{{data[0]}}" style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Reject</a>
+              <a href="/rejectStudent/{{data[0]}}" style="background-color: #ff0000; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Reject</a>
               <a href="/approveStudent/{{data[0]}}" style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Approve</a>
             </td>
           </tr>
