--- a/templates/CompanyRegistration.html
+++ b/templates/CompanyRegistration.html
@@ -127,7 +127,7 @@
             <td class="u-table-cell">{{data[2]}}</td>
             <td class="u-table-cell" style="display: inline-block;">
               <a href="/rejectCompany/{{data[0]}}"
-                style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Reject</a>
+                style="background-color: #ff0000; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Reject</a>
 
               <a href="/approveCompany/{{data[0]}}"
                 style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff; margin: 5px;"> Approve</a>
