--- a/templates/CompanyAdministration.html
+++ b/templates/CompanyAdministration.html
@@ -6,28 +6,73 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
+  <meta name="theme-color" content="#478ac9">
+  <meta property="og:title" content="CompanyAdministration">
+  <meta property="og:type" content="website">
+  <meta data-intl-tel-input-cdn-path="intlTelInput/">
+  <meta name="generator" content="Nicepage 5.17.1, nicepage.com">
+
   <title>CompanyAdministration</title>
+
   <link rel="stylesheet" href="{{ url_for('static', filename='style/nicepage.css')}}" media="screen">
   <link rel="stylesheet" href="{{ url_for('static', filename='style/CompanyAdministration.css')}}" media="screen">
+  <link id="u-theme-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+
   <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/jquery.js')}}"
     defer=""></script>
   <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/nicepage.js')}}"
     defer=""></script>
-  <meta name="generator" content="Nicepage 5.17.1, nicepage.com">
-  <link id="u-theme-google-font" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-
-
-
+  <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='script/script.js')}}"
+    defer=""></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": ""
 }</script>
-  <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="CompanyAdministration">
-  <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/">
+
+  <style>
+    .btn-delete {
+      background-color: #478ac9; 
+      padding: 5px 10px 5px 10px; 
+      color: #ffffff;
+    }
+
+    .createBtn {
+      background-color: #478ac9;
+      color: white;
+      margin-top: 20px;
+      position: relative;
+      padding: 10px 30px 10px 30px;
+      border: none;
+    }
+
+    .popup-msg {
+      background-color: #D1FFBD;
+      padding: 10px 30px;
+      position: absolute;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .msg {
+      font-size: 14px;
+      color: #006100;
+      font-weight: bold;
+    }
+
+    .close-msg {
+      border: none;
+      background-color: #D1FFBD;
+      float: right;
+      color: #006100;
+      font-size: 10px;
+      padding-top: 5px;
+      margin-left: 20px;
+    }
+  </style>
+
 </head>
 
 <body class="u-body u-xl-mode" data-lang="en">
@@ -109,9 +154,6 @@
         <tbody class="u-align-center u-grey-10 u-table-body u-table-body-1">
           <tr style="height: 45px;">
             <td class="u-table-cell">
-              <span style="text-decoration: underline !important;">Company ID</span>
-            </td>
-            <td class="u-table-cell">
               <span style="text-decoration: underline !important;">Company Name</span>
             </td>
             <td class="u-table-cell">
@@ -128,16 +170,27 @@
             <td class="u-table-cell">{{data[0]}}</td>
             <td class="u-table-cell">{{data[1]}}</td>
             <td class="u-table-cell">{{data[2]}}</td>
-            <td class="u-table-cell">{{data[3]}}</td>
             <td>
-              <a href="/delete/{{data[0]}}" style="background-color: #478ac9; padding: 5px 10px 5px 10px; color: #ffffff;">Delete</a>
+              <a href="/delete/{{data[0]}}" class="btn-delete">Delete</a>
             </td>
           </tr>
           {% endfor %}
-
         </tbody>
       </table>
+
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      {% for message in messages %}
+      <div class="popup-msg" role="alert">
+        <span class="msg">{{ message }}</span>
+        <input type="button" class="close-msg" value=&#10006 onclick=delete_flash(this)>
+      </div>
+      {% endfor %}
+      {% endif %}
+      {% endwith %}
     </div>
+
+
   </section>
 
 
