--- a/templates/AdminAdministration.html
+++ b/templates/AdminAdministration.html
@@ -42,6 +42,12 @@
       padding: 10px 30px 10px 30px;
       border: none;
     }
+    
+    .createBtn:hover {
+      text-decoration: none;
+      color: white;
+      cursor: pointer;
+    }
 
     .popup-msg {
       background-color: #D1FFBD;
