--- a/templates/CompanyRegistration.html
+++ b/templates/CompanyRegistration.html
@@ -36,9 +36,10 @@
   <style>
     .btn-reject {
       background-color: #ff0000;
-      padding: 5px 10px 5px 10px;
+      padding: 7px 15px 7px 15px; 
       color: #ffffff;
       margin: 5px;
+      font-size:medium;
     }
 
     .btn-reject:hover {
@@ -48,9 +49,10 @@
 
     .btn-approve {
       background-color: #478ac9;
-      padding: 5px 10px 5px 10px;
+      padding: 7px 15px 7px 15px; 
       color: #ffffff;
       margin: 5px;
+      font-size:medium;
     }
 
     .btn-approve:hover {
