--- a/templates/StudentRegistration.html
+++ b/templates/StudentRegistration.html
@@ -35,9 +35,10 @@
   <style>
     .btn-reject {
       background-color: #ff0000;
-      padding: 5px 10px 5px 10px;
+      padding: 7px 15px 7px 15px; 
       color: #ffffff;
       margin: 5px;
+      font-size:medium;
     }
 
     .btn-reject:hover {
@@ -47,9 +48,10 @@
 
     .btn-approve {
       background-color: #478ac9;
-      padding: 5px 10px 5px 10px;
+      padding: 7px 15px 7px 15px; 
       color: #ffffff;
       margin: 5px;
+      font-size:medium;
     }
 
     .btn-approve:hover {
@@ -164,7 +166,6 @@
     </div>
   </header>
   <section class="u-clearfix u-section-1" id="sec-b6ae">
-    <div class="u-border-1 u-border-palette-5-dark-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
     <a href="{{ url_for('StudentRegistration')}}"
       class="u-border-none u-btn u-button-style u-grey-10 u-hover-grey-10 u-btn-1">Student</a>
     <a href="{{ url_for('CompanyRegistration')}}"
