--- a/templates/SupervisorAdministration.html
+++ b/templates/SupervisorAdministration.html
@@ -43,6 +43,12 @@
       border: none;
     }
 
+    .createBtn:hover {
+      text-decoration: none;
+      color: white;
+      cursor: pointer;
+    }
+
     .popup-msg {
       background-color: #D1FFBD;
       padding: 10px 30px;
