--- a/templates/CompanyAdministration.html
+++ b/templates/CompanyAdministration.html
@@ -35,17 +35,15 @@
   <style>
     .btn-delete {
       background-color: #478ac9; 
-      padding: 5px 10px 5px 10px; 
+      padding: 7px 15px 7px 15px; 
       color: #ffffff;
+      font-size:medium;
     }
 
-    .createBtn {
-      background-color: #478ac9;
+    .btn-delete:hover {
+      text-decoration: none;
       color: white;
-      margin-top: 20px;
-      position: relative;
-      padding: 10px 30px 10px 30px;
-      border: none;
+      cursor: pointer;
     }
 
     .popup-msg {
